SSCS-10983 replaces all usage of PostHearing's requestReason and previewDocument with DocumentGeneration.bodyContent and DocumentStaging.previewDocument
updates common to new version without those props in PostHearing